--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
+          <li><%= link_to "Manage listings", seller_path %></li>
           <li><%= link_to "Se déconnecter", destroy_user_session_path, method: :delete%></li>
           <li><%= link_to "Edition", edit_user_registration_path%></li>
         <% else %>
