--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,10 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="alert alert-warning alert-dismissible" role="alert">
+
+  <%= devise_error_messages!%>
+</div>
     <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, :autofocus => true, class: "form-control" %>
