--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -6,13 +6,13 @@
 
       <div class="col-md-3">
         <div class="thumbnail">
-        <%= image_tag listing.image.url %>
+        <%= link_to image_tag(listing.image.url),listing %>
         <div class="caption">
           <h3><%= listing.name %></h3>
+
           <p><%= number_to_currency(listing.price) %></p>
-          <%= link_to 'Show', listing, class: "btn btn-link" %>
-          <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-          <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+          <p><%= "C'est à #{listing.user.name}" %></p>
+         
         </div>
       </div>
 
@@ -23,5 +23,6 @@
   </div>
 </div>
 
-
+<% if (user_signed_in?) %>
 <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+<% end %>
