--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,3 +54,11 @@ body {
     margin: 0px;
   }
 }
+.jumbotron {
+  background-image: url('jumbotron.jpg');
+  h1, h2 {
+  color:#ffffff;
+  font-family:comic-sans;
+  }
+
+}
