--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,4 +1,7 @@
-
+<div class="jumbotron">
+  <h1>Super nounou </h1>
+  <h2>Découvrez les meilleures</h2>
+</div>
 <div class="center">
 
   <div class="row">
