--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,19 +19,16 @@
         
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-          <li><%= link_to "Manage listings", seller_path %></li>
-          <li><%= link_to "Se déconnecter", destroy_user_session_path, method: :delete%></li>
-          <li><%= link_to "Edition", edit_user_registration_path%></li>
-        <% else %>
-          <li><%= link_to "Se connecter", new_user_session_path%></li>
-          <li><%= link_to "Inscription", new_user_registration_path%></li>
-        <% end %>
-    
-        
-
-        
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+      <% if user_signed_in? %>
+        <li><%= link_to "Sales History", sales_path %></li>
+        <li><%= link_to "Purchase History", purchases_path %></li>
+        <li><%= link_to "Manage Listings", seller_path %></li>
+        <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <li><%= link_to "Sign In", new_user_session_path %></li>
+      <% end %>
+    </ul>
+  </div><!-- /.navbar-collapse -->
 </nav>
