--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -10,11 +10,8 @@
       </ul>
     </div>
   <% end %>
+<div id="star-rating"></div>
 
-  <div class="form-group">
-    <%= f.label :rating %><br>
-    <%= f.number_field :rating, class: "form-control" %>
-  </div>
   <div class="form-group">
     <%= f.label :comment %><br>
     <%= f.text_area :comment, class: "form-control" %>
@@ -23,3 +20,11 @@
     <%= f.submit "Evaluer", class: "btn btn-success" %>
   </div>
 <% end %>
+
+<script>
+  $('#star-rating').raty({
+    path: '../../../assets',
+    scoreName: 'review[rating]',
+
+  });
+</script>
